--- a/app/src/main/res/layout/show_team.xml
+++ b/app/src/main/res/layout/show_team.xml
@@ -52,6 +52,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="24dp"
                         android:stretchColumns="1"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -96,6 +97,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="24dp"
                         android:stretchColumns="1"
                         app:layout_constraintBottom_toBottomOf="parent"
